unpackaged/main/default/objects/Opportunity/fields/Credit_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Number__c</fullName>
    <label>Credit Approval Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>