unpackaged/main/default/objects/Opportunity/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <label>Credit Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Researching Current Limit</fullName>
            </value>
            <value>
                <fullName>Qualify Client</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Within Existing Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>