unpackaged/main/default/objects/Opportunity/fields/Credit_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Description__c</fullName>
    <description>To capture specificity behind working within an existing limit (Auto wire transfer/certified cheque)</description>
    <inlineHelpText>How credit interest is being met aside from regular validation process. i.e. certified cheque, wire transfer, credit card, etc.</inlineHelpText>
    <label>Credit Description</label>
    <length>35</length>
    <type>Text</type>
</CustomField>