unpackaged/main/default/objects/Opportunity/fields/Credit_Limit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Value__c</fullName>
    <label>Credit Limit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>