unpackaged/main/default/objects/Opportunity/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <description>Used in handover.</description>
    <inlineHelpText>Details regarding Credit Limit Application status.</inlineHelpText>
    <label>Credit Notes</label>
    <type>TextArea</type>
</CustomField>