unpackaged/main/default/objects/Opportunity/fields/Currency_Default__c.field-meta.xml
<CustomField>
    <fullName>Currency_Default__c</fullName>
    <label>Currency Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>