unpackaged/main/default/objects/Opportunity/fields/Customer_Category_for_Item_Map__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category_for_Item_Map__c</fullName>
    <formula>IF( NOT(ISBLANK(JV_Partnership_Account__c)),'Third-Party Partnership',
       IF(NS_Customer_Category_ID__c = '4','External',
          IF( ISPICKVAL(Account.Customer_Category__c,'Intercompany'),'Intercompany',
             IF( ISPICKVAL(Account.Customer_Category__c,'Intra-Group'),'Intra-Group','')
          )
       )
)</formula>
    <label>Customer Category for Item Map</label>
    <type>Text</type>
</CustomField>