unpackaged/main/default/objects/Opportunity/fields/Customer_Created_in_NS__c.field-meta.xml
<CustomField>
    <fullName>Customer_Created_in_NS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Created in NS</label>
    <type>Checkbox</type>
</CustomField>