unpackaged/main/default/objects/Opportunity/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <description>Customer PO# (Purchase Order Number)</description>
    <inlineHelpText>Customer's Purchase Order number, needed for job invoicing.</inlineHelpText>
    <label>Customer PO #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>