unpackaged/main/default/objects/Opportunity/fields/Customer_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Relocation</label>
    <type>Checkbox</type>
</CustomField>