unpackaged/main/default/objects/Opportunity/fields/Daily_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Run_Rate__c</fullName>
    <label>Daily Run Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>