unpackaged/main/default/objects/Opportunity/fields/Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Change__c</fullName>
    <description>Date changes from Initial Communication and Rom to Bid Submittal</description>
    <label>Date Change to Bid Submittal</label>
    <type>Date</type>
</CustomField>