unpackaged/main/default/objects/Opportunity/fields/Date_Change_to_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Date_Change_to_Awarded__c</fullName>
    <label>Date Change to Awarded</label>
    <type>Date</type>
</CustomField>