unpackaged/main/default/objects/Opportunity/fields/Days_Since_Bid_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Bid_Submitted__c</fullName>
    <formula>TODAY() -   DATEVALUE( Bid_Submit_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Bid Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>