unpackaged/main/default/objects/Opportunity/fields/Days_Since_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closed__c</fullName>
    <description># of Days since Opps is Closed from Close Date</description>
    <formula>TODAY()  -  CloseDate</formula>
    <inlineHelpText>Today - Close Date on Opp</inlineHelpText>
    <label>Days Since Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>