unpackaged/main/default/objects/Opportunity/fields/Days_Since_Estimated_First_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Estimated_First_Revenue__c</fullName>
    <formula>TODAY()-Estimated_First_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Estimated First Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>