unpackaged/main/default/objects/Opportunity/fields/Delayed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Reason__c</fullName>
    <description>If the opportunity is delayed, request the user to enter details about why it is delayed</description>
    <label>Delayed Reason</label>
    <type>TextArea</type>
</CustomField>