unpackaged/main/default/objects/Opportunity/fields/Dept_Branch_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Dept_Branch_Salesperson__c</fullName>
    <formula>Vanguard_Department_Code__c &amp; " - " &amp; Vanguard_Branch__c &amp; " - " &amp; Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept-Branch-Salesperson</label>
    <type>Text</type>
</CustomField>