unpackaged/main/default/objects/Opportunity/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Overview of Opportunity and Opportunity details not captured in other fields.</description>
    <inlineHelpText>Overview of Opportunity and Opportunity details not captured in other fields.</inlineHelpText>
    <label>Description.</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>