unpackaged/main/default/objects/Opportunity/fields/Disaster_Location__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Location__c</fullName>
    <label>Disaster Location</label>
    <type>TextArea</type>
</CustomField>