unpackaged/main/default/objects/Opportunity/fields/Discharge_Effluent_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Effluent_Analysis__c</fullName>
    <inlineHelpText>Bi-Monthly cost of the analysis</inlineHelpText>
    <label>Discharge Effluent Analysis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>