unpackaged/main/default/objects/Opportunity/fields/Dismantle__c.field-meta.xml
<CustomField>
    <fullName>Dismantle__c</fullName>
    <label>Dismantle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>