unpackaged/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Reads the Division from the selected Branch</description>
    <formula>TEXT(Branch_Name__r.Division__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>