unpackaged/main/default/objects/Opportunity/fields/Division_Region__c.field-meta.xml
<CustomField>
    <fullName>Division_Region__c</fullName>
    <label>Division / Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Camps Canada</fullName>
            </value>
            <value>
                <fullName>Camps US</fullName>
            </value>
            <value>
                <fullName>ES Canada</fullName>
            </value>
            <value>
                <fullName>ES US</fullName>
            </value>
            <value>
                <fullName>LodgeLink</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>MPA</fullName>
            </value>
            <value>
                <fullName>MSS East</fullName>
            </value>
            <value>
                <fullName>MSS Pacific</fullName>
            </value>
            <value>
                <fullName>MSS Prairies</fullName>
            </value>
            <value>
                <fullName>MSS US</fullName>
            </value>
            <value>
                <fullName>MSS US MP</fullName>
            </value>
            <value>
                <fullName>MSS Canada</fullName>
            </value>
            <value>
                <fullName>MSS US Vanguard</fullName>
            </value>
            <value>
                <fullName>MSS Canada East</fullName>
            </value>
            <value>
                <fullName>MSS Canada West</fullName>
            </value>
            <value>
                <fullName>MSS US Southwest</fullName>
            </value>
            <value>
                <fullName>MSS US East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>