unpackaged/main/default/objects/Opportunity/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>Enter the quantity and type of product required for this opportunity.</description>
    <inlineHelpText>Enter the quantity and type of product required for this opportunity.</inlineHelpText>
    <label>Product Quantity/Type</label>
    <type>TextArea</type>
</CustomField>