unpackaged/main/default/objects/Opportunity/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <inlineHelpText>Date of first delivery</inlineHelpText>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>