unpackaged/main/default/objects/Opportunity/fields/Estimated_First_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_Revenue__c</fullName>
    <inlineHelpText>Date of first invoice/Contract Start Date</inlineHelpText>
    <label>Estimated First Revenue</label>
    <type>Date</type>
</CustomField>