unpackaged/main/default/objects/Opportunity/fields/Estmd_Fst_Rev_Ready_for_Sync_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Estmd_Fst_Rev_Ready_for_Sync_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estmd Fst Rev - Ready for Sync(Outreach)</label>
    <type>Checkbox</type>
</CustomField>