unpackaged/main/default/objects/Opportunity/fields/Extention__c.field-meta.xml
<CustomField>
    <fullName>Extention__c</fullName>
    <description>This field occurs in the following Record Types:
Equipment Rentals</description>
    <label>Extention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month-to-Month</fullName>
            </value>
            <value>
                <fullName>Day-to-Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>