unpackaged/main/default/objects/Opportunity/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Unique ID for this record, used for integrations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for this record, used for integrations.</inlineHelpText>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>