unpackaged/main/default/objects/Opportunity/fields/Fleet_Central_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Contract_Number__c</fullName>
    <description>This is used to correct the Fleet Central Documents and Fleet Central Project Links for older opportunities before branches were changed using the dummy update</description>
    <label>Fleet Central Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>