unpackaged/main/default/objects/Opportunity/fields/Fleet_Central_Link__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Link__c</fullName>
    <description>Generates URL for Fleet Central Documents</description>
    <formula>IF(ISBLANK(Fleet_Central_Contract_Number__c ),
IF( Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/BD%20Documents/" &amp;  Contract_Number__c , "Fleet Central Documents", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Documents", "_blank")
),
IF( Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/BD%20Documents/" &amp;  Fleet_Central_Contract_Number__c , "Fleet Central Documents", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Documents", "_blank")
)
)</formula>
    <inlineHelpText>Link to Fleet Central Document Library for this Opportunity</inlineHelpText>
    <label>Fleet Central Documents</label>
    <type>Text</type>
</CustomField>