unpackaged/main/default/objects/Opportunity/fields/Fleet_Central_Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Project_Link__c</fullName>
    <description>Link to Fleet Central Project for this Opportunity</description>
    <formula>IF(ISBLANK(Fleet_Central_Contract_Number__c ),

IF( Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/ProjectLauncher.aspx?BDGLContract=" &amp; Contract_Number__c , "Fleet Central Project", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Project", "_blank")),

IF( Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/ProjectLauncher.aspx?BDGLContract=" &amp; Fleet_Central_Contract_Number__c , "Fleet Central Project", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Project", "_blank"))

)</formula>
    <inlineHelpText>Link to Fleet Central Project for this Opportunity</inlineHelpText>
    <label>Fleet Central Project</label>
    <type>Text</type>
</CustomField>