unpackaged/main/default/objects/Opportunity/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <description>Poor design. Line level data being tracked at top. Meant to capture for all but not consistently used across org. Used by BOXX Canada and BOXX US (incl MPA).</description>
    <inlineHelpText>Yard where units are to be picked up from.</inlineHelpText>
    <label>Ex Works</label>
    <length>255</length>
    <type>Text</type>
</CustomField>