unpackaged/main/default/objects/Opportunity/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <description>Date used to remind the sales rep to followup with customer</description>
    <inlineHelpText>Set the next date to contact the customer</inlineHelpText>
    <label>Followup Date</label>
    <type>Date</type>
</CustomField>