unpackaged/main/default/objects/Opportunity/fields/Future_Proposed_Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Future_Proposed_Asset_Status__c</fullName>
    <label>Future/Proposed Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>