unpackaged/main/default/objects/Opportunity/fields/Handover_Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Flow_Type__c</fullName>
    <description>Trigger for Project Handover Flow development</description>
    <inlineHelpText>Handover flow trigger</inlineHelpText>
    <label>Handover Flow Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>