unpackaged/main/default/objects/Opportunity/fields/Handover_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Type__c</fullName>
    <description>Distinguishes which handover is being performed on Lodge Opportunities</description>
    <inlineHelpText>When Transaction Type is "Lodging", distinguish whether BD or LodgeLink will contract</inlineHelpText>
    <label>Handover Type (Lodging)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BD Direct</fullName>
            </value>
            <value>
                <fullName>LodgeLink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>