unpackaged/main/default/objects/Opportunity/fields/Imported_from_SAP__c.field-meta.xml
<CustomField>
    <fullName>Imported_from_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported from SAP</label>
    <type>Checkbox</type>
</CustomField>