unpackaged/main/default/objects/Opportunity/fields/In_fleet_Building_Factor_L__c.field-meta.xml
<CustomField>
    <fullName>In_fleet_Building_Factor_L__c</fullName>
    <label>In-fleet Building Factor (L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>