unpackaged/main/default/objects/Opportunity/fields/In_fleet_Capped_Costs_S__c.field-meta.xml
<CustomField>
    <fullName>In_fleet_Capped_Costs_S__c</fullName>
    <label>In-fleet Capped Costs (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>