unpackaged/main/default/objects/Opportunity/fields/In_Fleet_Floors__c.field-meta.xml
<CustomField>
    <fullName>In_Fleet_Floors__c</fullName>
    <label>In Fleet Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>