unpackaged/main/default/objects/Opportunity/fields/Indigenous_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the name of the partnership.</description>
    <inlineHelpText>Type to lookup the name of the partnership.  If no partnership is involved, type and select "None".</inlineHelpText>
    <label>Indigenous Partnership</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The partnership does not exist or or may not be active.</errorMessage>
        <filterItems>
            <field>Partnership__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Partnership__c</referenceTo>
    <relationshipLabel>Opportunities involving this Partnership</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>