unpackaged/main/default/objects/Opportunity/fields/Indigenous_Partnership_Name__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Partnership_Name__c</fullName>
    <description>Name of Indigenous Partnership for Handover sync</description>
    <inlineHelpText>Name of Indigenous Partnership for Handover sync</inlineHelpText>
    <label>Indigenous Partnership Name</label>
    <length>95</length>
    <type>Text</type>
</CustomField>