unpackaged/main/default/objects/Opportunity/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>Sub-category of Industry. If Other, must also specify Industry Details.</description>
    <inlineHelpText>Sub-category of Industry. If Other, must also specify Industry Details.</inlineHelpText>
    <label>Industry Segment - Site Owner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture (incl Forestry)</fullName>
            </value>
            <value>
                <fullName>Clean and Renewable</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Commercial/Industrial</fullName>
            </value>
            <value>
                <fullName>Defense (Naval Bases, Air Force Bases, Army Bases)</fullName>
            </value>
            <value>
                <fullName>Healthcare, Emergency Response and Social Services</fullName>
            </value>
            <value>
                <fullName>Indigenous</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Metals (Gold, Copper, Silver, Iron)</fullName>
            </value>
            <value>
                <fullName>Non-Metals (excl Coal)</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Downstream (Refineries/Petrochemicals)</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Midstream (Infrastructure, Pipelines, Facilities)</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Upstream - Completions</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Upstream - Drilling</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Upstream - Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Government (excl Education, Healthcare, Indigenous)</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Staples</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Travel Management</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Information and Professional Services (excl Travel Management)</fullName>
            </value>
            <value>
                <fullName>Discretionary (excl Travel Management)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>