unpackaged/main/default/objects/Opportunity/fields/Industry_Segment_Details__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment_Details__c</fullName>
    <description>Used to manage Industry and Industry Segment picklists</description>
    <inlineHelpText>Details to clarify Industry and/or Industry Segment.</inlineHelpText>
    <label>Industry Details - Site Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>