unpackaged/main/default/objects/Opportunity/fields/Inital_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Inital_Transportation__c</fullName>
    <label>Inital Transportation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>