unpackaged/main/default/objects/Opportunity/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inside Sales Rep for this Opportunity</description>
    <inlineHelpText>Inside Sales Rep for this Opportunity</inlineHelpText>
    <label>Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inside_Sales_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>