unpackaged/main/default/objects/Opportunity/fields/Install_Tear_down_by__c.field-meta.xml
<CustomField>
    <fullName>Install_Tear_down_by__c</fullName>
    <label>Install/Tear down by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>