unpackaged/main/default/objects/Opportunity/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>