unpackaged/main/default/objects/Opportunity/fields/Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Notes__c</fullName>
    <description>Used for handover.</description>
    <inlineHelpText>Details regarding insurance status and requirements.</inlineHelpText>
    <label>Insurance Notes</label>
    <type>TextArea</type>
</CustomField>