unpackaged/main/default/objects/Opportunity/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <description>Used in handover.</description>
    <inlineHelpText>Indicate whether the customer is providing their own Property insurance or paying our fee for property coverage. For an outline of Insurance requirements, refer to your contract's T&amp;Cs.</inlineHelpText>
    <label>Property Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Coverage</fullName>
            </value>
            <value>
                <fullName>BOXX Property/Customer General</fullName>
                <label>Black Diamond/BOXX Property</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>