unpackaged/main/default/objects/Opportunity/fields/Is_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Is_CPQ__c</fullName>
    <description>Used to run process and flow logic</description>
    <formula>OR(
RecordType.Name = "BD BOXX CPQ",
RecordType.Name = "BD AUS CPQ",
RecordType.Name = "BD ES CPQ",
RecordType.Name = "BD WFS CPQ",
RecordType.Name = "BD MSS",
RecordType.Name = "BD Modular",
RecordType.Name = "BD MSS Major Projects",
RecordType.Name = "BD Energy",
RecordType.Name = "BD Workforce",
RecordType.Name = "BD Lodging",
RecordType.Name = "BD Disaster")</formula>
    <inlineHelpText>Record Types configured to use CPQ</inlineHelpText>
    <label>Is CPQ</label>
    <type>Checkbox</type>
</CustomField>