unpackaged/main/default/objects/Opportunity/fields/ISR_User_Check__c.field-meta.xml
<CustomField>
    <fullName>ISR_User_Check__c</fullName>
    <formula>Inside_Sales_Rep__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISR User Check</label>
    <type>Checkbox</type>
</CustomField>