unpackaged/main/default/objects/Opportunity/fields/JV_Partnership_Account__c.field-meta.xml
<CustomField>
    <fullName>JV_Partnership_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Partnership Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Black Diamond West Moberly Limited Partnership</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Black Diamond Nehiyawak Limited Partnership</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Black Diamond Dene Limited Partnership</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>Whitecap Black Diamond Limited Partnership</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (JV Partnership Account)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>