unpackaged/main/default/objects/Opportunity/fields/Last_Auto_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Auto_Renewal_Date__c</fullName>
    <label>Last Auto Renewal Date</label>
    <type>Date</type>
</CustomField>