unpackaged/main/default/objects/Opportunity/fields/Lease_Factor__c.field-meta.xml
<CustomField>
    <fullName>Lease_Factor__c</fullName>
    <formula>IF((In_Fleet_Capped_Costs_L__c +  New_Capped_Costs_L__c)=0, 0, Building_Payment_L__c / ( In_Fleet_Capped_Costs_L__c +  New_Capped_Costs_L__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>