unpackaged/main/default/objects/Opportunity/fields/Lease_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Lease_Maintenance__c</fullName>
    <label>Lease Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black Diamond</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>