unpackaged/main/default/objects/Opportunity/fields/Lease_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lease_Revenue__c</fullName>
    <description>Lease Revenue = Lease Stream + Lease Upfront one-times</description>
    <formula>Lease_Stream__c +  Lease_Upfront_One_times__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>